feat: Improve build configuration and versioning
Update Vite configuration to correctly inject environment variables and disable source maps for production builds. Also, adjust the HTML title to reflect the version increment. This ensures a more robust and optimized build process.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>성운의 현자: 숫자 탐구 v5.2</title>
+    <title>성운의 현자: 숫자 탐구 v5.3</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -78,7 +78,7 @@
     <div class="stars-container" id="stars"></div>
     <div id="root"></div>
     
-    <!-- Vite는 이 경로를 감지하여 모든 의존성을 번들링합니다. importmap은 절대 사용하지 마세요. -->
+    <!-- Vite 빌드 시스템은 이 경로를 통해 자동으로 번들링을 수행합니다. -->
     <script type="module" src="/index.tsx"></script>
     
     <script>
