--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>성운의 현자: 숫자 탐구 v5.3</title>
+    <title>성운의 현자: 숫자 탐구 v5.4</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -78,7 +78,7 @@
     <div class="stars-container" id="stars"></div>
     <div id="root"></div>
     
-    <!-- Vite 빌드 시스템은 이 경로를 통해 자동으로 번들링을 수행합니다. -->
+    <!-- Vite는 이 index.tsx를 통해 모든 라이브러리를 빌드합니다. importmap은 절대 포함하지 마십시오. -->
     <script type="module" src="/index.tsx"></script>
     
     <script>
