refactor: Update Vite configuration and Gemini service
Update Vite configuration to correctly define process.env variables for browser compatibility. Improve error handling in the Gemini service's audio playback function and update the application version in index.html.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>성운의 현자: 숫자 탐구 v5.4</title>
+    <title>성운의 현자: 숫자 탐구 v5.5</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -78,7 +78,7 @@
     <div class="stars-container" id="stars"></div>
     <div id="root"></div>
     
-    <!-- Vite는 이 index.tsx를 통해 모든 라이브러리를 빌드합니다. importmap은 절대 포함하지 마십시오. -->
+    <!-- Vite 엔트리 포인트입니다. 절대 importmap을 추가하지 마세요. -->
     <script type="module" src="/index.tsx"></script>
     
     <script>
