--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>성운의 현자: 숫자 탐구 v5.5</title>
+    <title>성운의 현자: 숫자 탐구 v5.6</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -78,7 +78,7 @@
     <div class="stars-container" id="stars"></div>
     <div id="root"></div>
     
-    <!-- Vite 엔트리 포인트입니다. 절대 importmap을 추가하지 마세요. -->
+    <!-- Vite가 이 파일을 읽어 모든 의존성을 빌드합니다. -->
     <script type="module" src="/index.tsx"></script>
     
     <script>
